# school-code

./: .gitignore  Makefile  README  alpha.txt  configure.ac  hello.java  iam751_SIMD  javadoc-options  yes.txt
Misc_Files/: Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac
Misc_Files/HW2/: Tester
Misc_Files/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
Misc_Files/cs671-src/: README
Misc_Files/cs671-src/src/cs671/: Test.java.  TestResult._java  TestResult.java.
Misc_Files/cs671-src/src/tests/: SampleTests1.java
Misc_Files/iam751/: Makefile  greeting.c  hello.c~HEAD  hello.h  scalar_product.c  vec_add.c  vec_add.c~HEAD
cs671-src/: Makefile-svn  (+2 more)
iam751/: #mat_vec_mult_test.c#  #test_scalar_product.c#  #vec_math.h#  .#mat_vec_mult_test.c  .#vec_math.h  Makefile  Makefile.am  README  configure.ac  configure.scan  factorial.c  fortran_C.F  fortran_C.c  funct_fortran.F  funct_fortran.c  hello  hello.c  mat_vec_mult.c  mat_vec_mult_test.c  print_integer_C.c  print_integer_c  print_integer_fortran.F  print_integer_fortran.c  scalar_product.c  scalar_product_test.c  test_scalar_product.c  vec_add.c  vec_add_old.  vec_add_test.c  vec_math  vec_math.c  vec_math.h  vec_write.c
iam751/.deps/: greeting.Po  hello.Po  mat_vec_mult.Po  mat_vec_mult_test.Po  scalar_product.Po  scalar_product_test.Po  vec_add.Po  vec_add_test.Po  vec_math.Po
iam751/autom4te.cache/: output.0  requests  traces.0
iam751/autotools/linear_algebra/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac.orig  linear_algebra.h  makefile.am  test_vector_add  test_vector_add.c  test_vector_dot  test_vector_dot.c  vector.c  vector_add.c  vector_dot.c
iam751/autotools/linear_algebra/.deps/: test_vector_add.Po  test_vector_dot.Po  vector.Po  vector_add.Po  vector_dot.Po
iam751/autotools/linear_algebra/autom4te.cache/: output.1  output.3  requests  traces.1  traces.2  traces.3
linear_algebra/: .gitignore  Makefile.am  changelog  configure.ac  linear_algebra.h  matrix.c  print_matrix_fortran.F  test_data_layout.c  test_data_layout_fortran.F  test_matrix_matrix_multiply.c  test_matrix_vector_multiply.c
(+108 files in other folders)
