#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([hw_1], [0.01])
AM_INIT_AUTOMAKE
#m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

# Checks for programs.
AC_PROG_JAVA_CC(javac)
JAVAC=javac
AC_PROG_JAVAC
AC_PROG_JAVA

#AC_PROG_RANLIB
#m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
#AC_CONFIG_HEADERS([config.h])
#AC_CONFIG_FILES([Makefile])
AC_OUTPUT(Makefile)

echo ""
echo "                       Configure Summary"
echo "                       ================="
echo ""
echo "Compiling Options:"
echo "------------------"
echo "                     Java Compiler: $JAVAC"
