bin_PROGRAMS =\
	vec_math\
	hello
lib_LIBRARIES=\
	libvec_math.a
vec_math_SOURCES = vec_math.c vec_math.h mat_vec_mult.c vec_add.c\
	scalar_product.c scalar_product_test.c vec_add_test.c mat_vec_mult_test.c
libvec_math_a_SOURCES =  vec_math.h mat_vec_mult.c vec_add.c scalar_product.c
hello_SOURCES = hello.c hello.h greeting.c factorial.c
